# MiniCompiler

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  a.json  build.sh  checklist.md  test.sh
.VSCodeCounter/: results.csv  results.md  results.txt
.github/ISSUE_TEMPLATE/: ----.md  bug--.md
doc/: C-- Language Specification.html  The syntax of C in Backus-Naur form.html  report.md
include/json/: jsoncpp.cc
ref/: a.ast.json  a.c  a.json  a.ll
scripts/: install_dependencies.sh  runall.sh  script.sh  success.sh
src/: a.ast.json  a.c  grammar.y  main.cc  main.cxx  parser.hpp  parser.ypp  regular.l  scanner.lex
src/ast/: ast.cc  ast.h
src/ir/: block.h  function.h  generator.h  global.cc  global.h  index.h  ir  ir.cc  ir.h  symbol.h  type.h  value.h
src/ir/type/: float.h  function.h  index.h  integer.h  pointer.h  symbol.cc  symbol.h  type.cc  type.h  void.h
src/lib/json/: json.h
src/parser/: parser.ypp  parser.yy  scanner.lex  scanner.ll
src/targetcode/: tc.cpp  tc.h  test2.c  test2.ir
src/tc/: tc.cc  tc.h
src/util/: ast.cc  ast.h  json.cc  prettyPrint.cc  prettyPrint.h
test/: a.c  a.json  add.cc  all.c  all.json  factorial.c  fib.c  simple.c  simple.json  test.cc
test/basic grammar/: basic_operations.c  control_flow.c  format_transform.c  function_call.c  function_definition2.c  pointer_type.c
test/function_definition/: 1.c  1.json  1.res  2.c  2.json  2.ll  2.res  3.c  3.json  3.res
test/ir/: CMakeLists.txt  build.sh  main.cc
test/semantic error/: duplicate_definition.c
test/syntax error/: more_error.c  single_error.c
